# dopax

./: .gitignore  Cargo.toml  README.md
bindings/: README.md
bindings/csharp/: Dopax.cs  README.md
bindings/go/: README.md  dopax.go  go.mod
bindings/java/: README.md  build.gradle.kts  settings.gradle.kts
bindings/node/: README.md  package.json
bindings/node/src/: index.ts
bindings/python/: README.md  pyproject.toml
crates/dopax-core/: Cargo.toml
crates/dopax-core/src/: adapter.rs  capabilities.rs  client.rs  error.rs  json_api.rs  lib.rs  provider.rs  types.rs
crates/dopax-ffi/: Cargo.toml
crates/dopax-ffi/src/: lib.rs
docs/: architecture.md  litellm-extraction.md
element-web/apps/desktop/: config.json  electron-builder.ts  package.json
element-web/docs/: desktop-release-packaging.md
matrix-bot-ts/: README.md  package.json  run-bot.sh
matrix-bot-ts/examples/: claude.env.example  codex.env.example  copilot.env.example  gemini.env.example  opencode.env.example
matrix-bot-ts/scripts/: build-claude-runtime-image.sh  build-codex-runtime-image.sh  build-gemini-runtime-image.sh  build-opencode-runtime-image.sh  manage-instance.sh  run-tuwunel-supervisor-demo.sh  start-supervisor-demo-remote.sh  start-supervisor-demo.sh
matrix-bot-ts/src/: bootstrap.ts  commands.ts  config.ts  executable.ts  index.ts  room-config.ts  runtime.ts  state.ts
matrix-bot-ts/src/architecture/: orchestrator.ts
matrix-bot-ts/src/providers/: base.ts  claude.ts  codex.ts  gemini.ts  opencode.ts  (+2 more)
matrix-bot-ts/supervisor/: local.example.json  remote.example.json
(+28 files in other folders)
