[workspace]
members = [
    "crates/dopax-core",
    "crates/dopax-ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/dopax-ai/dopax"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
